--- a/src/components/LayoutMain/Slider/Slider.css
+++ b/src/components/LayoutMain/Slider/Slider.css
@@ -20,10 +20,7 @@ body{
     list-style: none;
     background-color: rgba(0,0,0,0.4);
 }
-.hover-slider__item--active
-{
-    color: rgba(255, 255, 255, 1);
-}
+
 
 .hover-slider-nav__item
 {
@@ -31,12 +28,15 @@ body{
     padding: 2vh;
     font-size: 8vh;
     font-family: bold;
+    color: rgba(255, 255, 255, 0.5);
     cursor: pointer;
     transition: .2s;
-    color: rgba(255, 255, 255, 0.5);
 }
 
-
+.hover-slider-nav__item--active
+{
+    color: rgba(255, 255, 255, 1);
+}
 
 .hover-slider
 {
@@ -60,6 +60,10 @@ body{
     transform: translateY(-2vh);
 }
 
+.hover-slider__item--active{
+    opacity: 1;
+    transform: translateY(0);
+}
 
 
 hover-slider__item-img
