--- a/src/components/style.css
+++ b/src/components/style.css
@@ -1,21 +1,3 @@
-.interesting__container
-{
-    background-color: white;
-}
-body{
-    background-color: white;
-}
-
-.header.active{
-    background-color: white;
-    color: black;
-}
-
-.header-menu.active
-{
-    display: none;
-}
-
 
 .heading {
     position: relative;
@@ -29,6 +11,337 @@ body{
 @media(max-width:576px) {
     .heading {
         flex-wrap: wrap
+    }
+}
+.heading {
+    position: relative;
+    width: 100%;
+    height: 60px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+@media(max-width:576px) {
+    .heading {
+        flex-wrap: wrap;
+    }
+}.heading--grid {
+     height: 100%}
+.heading__title {
+    text-transform: uppercase;
+    font-size: 1.125rem;
+    font-weight: 700;
+    margin-right: 20px;
+    transition: color .3s ease;
+}
+@media(max-width:1199px) {
+    .heading__title {
+        font-size: .875rem;
+    }
+}@media(max-width:576px) {
+    .heading__title {
+        font-size: 1rem;
+    }
+}.heading__title:hover {
+     color: #06a6a0;
+ }
+.heading__title--readonly {
+    pointer-events: none;
+}
+.heading__action {
+    cursor: pointer;
+    text-transform: uppercase;
+    font-size: .625rem;
+    font-weight: 700;
+    transition: all .3s ease;
+}
+@media(max-width:576px) {
+    .heading__action {
+        font-size: .55rem;
+    }
+}.heading__action--readonly {
+     pointer-events: none;
+     font-weight: 400;
+ }
+.heading__action:hover:not(.heading__action--readonly) {
+    color: #06a6a0;
+}
+.skeleton {
+    width: 100%;
+    height: 100%;
+    justify-content: flex-end;
+    background-color: #e0e0e0;
+}
+.skeleton .content, .skeleton {
+    position: relative;
+    display: flex;
+}
+.skeleton .content {
+    flex-basis: 50%;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px 20px 15px;
+    background-color: #f7f6f6;
+}
+@media(max-width:576px) {
+    .skeleton .content {
+        padding: 12px;
+        flex-basis: 100%;
+        margin-top: calc(100% - 24px);
+    }
+}.skeleton-info, .skeleton-meta {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+ }
+@media(max-width:576px) {
+    .skeleton-main {
+        margin-top: 12px;
+    }
+}.skeleton__category {
+     width: 20%}
+.skeleton__category, .skeleton__genre {
+    height: 10px;
+    border-radius: 5px;
+    background-color: #c4c4c4;
+}
+.skeleton__genre {
+    width: 30%}
+.skeleton__title {
+    width: 90%}
+.skeleton__artist, .skeleton__title {
+    height: 20px;
+    border-radius: 10px;
+    background-color: #c4c4c4;
+}
+.skeleton__artist {
+    margin-top: 8px;
+    width: 60%}
+@media(max-width:1479px) {
+    .skeleton__artist {
+        height: 16px;
+        border-radius: 8px;
+    }
+}@media(max-width:576px) {
+    .skeleton__artist {
+        margin-top: 8px;
+    }
+}@media(max-width:576px) {
+    .skeleton-excerpt {
+        margin-top: 12px;
+    }
+}.skeleton-excerpt__item {
+     width: 95%;
+     height: 14px;
+     border-radius: 7px;
+     background-color: #c4c4c4;
+ }
+.skeleton-excerpt__item:not(:first-of-type) {
+    margin-top: 4px;
+    width: 55%}
+.skeleton__rating {
+    width: 50px;
+    height: 30px;
+    border-radius: 15px;
+    background-color: #c4c4c4;
+}
+@media(max-width:767px) {
+    .skeleton__rating {
+        width: 40px;
+        height: 24px;
+        border-radius: 12px;
+    }
+}@media(max-width:576px) {
+    .skeleton__rating {
+        margin-top: 12px;
+        margin-bottom: 12px;
+    }
+}.skeleton__author {
+     width: 40%}
+.skeleton__author, .skeleton__date {
+    height: 10px;
+    border-radius: 5px;
+    background-color: #c4c4c4;
+}
+.skeleton__date {
+    width: 30%}
+.loader {
+    display: inline-block;
+    position: relative;
+    width: 60px;
+    height: 60px;
+}
+@media(max-width:767px) {
+    .loader {
+        height: 30px;
+    }
+}@media(max-width:576px) {
+    .loader {
+        height: 27px;
+    }
+}.loader div {
+     position: absolute;
+     top: 26px;
+     width: 8px;
+     height: 8px;
+     border-radius: 50%;
+     background: #06a6a0;
+     -webkit-animation-timing-function: cubic-bezier(0, 1, 1, 0);
+     animation-timing-function: cubic-bezier(0, 1, 1, 0);
+ }
+@media(max-width:767px) {
+    .loader div {
+        top: 11px;
+    }
+}@media(max-width:576px) {
+    .loader div {
+        width: 7px;
+        height: 7px;
+        top: 10px;
+    }
+}.loader div:first-child {
+     left: 6px;
+     -webkit-animation: loader-1-data-v-2f7c3980 .6s infinite;
+     animation: loader-1-data-v-2f7c3980 .6s infinite;
+ }
+.loader div:nth-child(2) {
+    left: 6px;
+}
+.loader div:nth-child(2), .loader div:nth-child(3) {
+    -webkit-animation: loader-2-data-v-2f7c3980 .6s infinite;
+    animation: loader-2-data-v-2f7c3980 .6s infinite;
+}
+.loader div:nth-child(3) {
+    left: 24px;
+}
+.loader div:nth-child(4) {
+    left: 42px;
+    -webkit-animation: loader-3-data-v-2f7c3980 .6s infinite;
+    animation: loader-3-data-v-2f7c3980 .6s infinite;
+}
+@-webkit-keyframes loader-1-data-v-2f7c3980 {
+    0% {
+        transform: scale(0);
+    }
+    to {
+        transform: scale(1);
+    }
+}@keyframes loader-1-data-v-2f7c3980 {
+     0% {
+         transform: scale(0);
+     }
+     to {
+         transform: scale(1);
+     }
+ }@-webkit-keyframes loader-2-data-v-2f7c3980 {
+      0% {
+          transform: translate(0);
+      }
+      to {
+          transform: translate(18px);
+      }
+  }@keyframes loader-2-data-v-2f7c3980 {
+       0% {
+           transform: translate(0);
+       }
+       to {
+           transform: translate(18px);
+       }
+   }@-webkit-keyframes loader-3-data-v-2f7c3980 {
+        0% {
+            transform: scale(1);
+        }
+        to {
+            transform: scale(0);
+        }
+    }@keyframes loader-3-data-v-2f7c3980 {
+         0% {
+             transform: scale(1);
+         }
+         to {
+             transform: scale(0);
+         }
+     }
+
+.grid--reviews {
+    grid-template-columns: repeat(4, 1fr);
+    grid-auto-rows: 60px;
+}
+@media(max-width:767px) {
+    .grid--reviews {
+        display: flex;
+        flex-direction: column;
+        grid-gap: unset;
+    }
+}.grid--reviews .heading-container {
+     grid-column: 1/span 4;
+     grid-row: span 1;
+ }
+@media(max-width:767px) {
+    .grid--reviews .heading-container {
+        grid-column: 1/span 2;
+    }
+}.grid--reviews .news-card-container {
+     grid-column: span 2;
+     grid-row: span 4;
+ }
+@media(max-width:1199px) {
+    .grid--reviews .news-card-container {
+        grid-column: span 4;
+    }
+}@media(max-width:767px) {
+    .grid--reviews .news-card-container {
+        margin-top: 15px;
+        height: 255px;
+    }
+}@media(max-width:576px) {
+    .grid--reviews .news-card-container {
+        height: auto;
+    }
+}.more {
+     position: relative;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     grid-column: span 4;
+ }
+@media(max-width:1199px) {
+    .more {
+        grid-column: span 4;
+    }
+}@media(max-width:767px) {
+    .more {
+        margin-top: 20px;
+    }
+}.more--prev {
+     grid-row: 17/span 1;
+ }
+@media(max-width:1479px) {
+    .more--prev {
+        grid-row: 22/span 1;
+    }
+}@media(max-width:1199px) {
+    .more--prev {
+        grid-row: 26/span 1;
+    }
+}@media(max-width:767px) {
+    .more--prev {
+        order: 14;
+    }
+}.more--next {
+     grid-row: span 1;
+     order: 99;
+ }
+.more .button:hover {
+    background-color: transparent;
+    color: #06a6a0;
+}
+.grid--with-form .more--prev {
+    grid-row: 18/span 1;
+}
+@media(max-width:1479px) {
+    .grid--with-form .more--prev {
+        grid-row: 23/span 1;
     }
 }
 
@@ -835,7 +1148,7 @@ body{
 
 .slider {
     position: relative;
-    height: 100vh
+    height: 100vh;
 }
 
 @media(max-width:576px) {
@@ -894,6 +1207,7 @@ body{
 
 .slide {
     height: 100vh;
+    height: calc(var(--vh, 1vh)*100);
     cursor: pointer;
     color: #fff;
     display: flex;
@@ -904,6 +1218,7 @@ body{
 @media(max-width:576px) {
     .slide {
         height: 100vh;
+        height: calc(var(--vh, 1vh)*100 - var(--mobile-menu-height, 0px))
     }
 }
 
@@ -1319,12 +1634,14 @@ body{
 
 .skeleton {
     height: 100vh;
+    height: calc(var(--vh, 1vh)*100);
     background-color: #e0e0e0
 }
 
 @media(max-width:576px) {
     .skeleton {
         height: 100vh;
+        height: calc(var(--vh, 1vh)*100 - var(--mobile-menu-height, 0px))
     }
 }
 
@@ -2387,7 +2704,8 @@ body{
 }
 
 .interesting__container {
-    margin-top: 25px
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 @media(max-width:767px) {
@@ -2790,6 +3108,7 @@ body{
     align-items: center;
     justify-content: center;
     min-height: 100vh;
+    min-height: calc(var(--vh, 1vh)*100)
 }
 
 .error__code {
@@ -2858,7 +3177,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Light.woff);
+    src: url(../fonts/ProximaNova-Light.woff);
     font-style: normal;
     font-weight: 400;
     font-display: swap
@@ -2866,7 +3185,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Regular.woff);
+    src: url(../fonts/ProximaNova-Regular.woff);
     font-style: normal;
     font-weight: 500;
     font-display: swap
@@ -2874,7 +3193,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Semibold.woff);
+    src: url(../fonts/ProximaNova-Semibold.woff);
     font-style: normal;
     font-weight: 600;
     font-display: swap
@@ -2882,7 +3201,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Bold.woff);
+    src: url(../fonts/ProximaNova-Bold.woff);
     font-style: normal;
     font-weight: 700;
     font-display: swap
@@ -2890,7 +3209,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Extrabold.woff);
+    src: url(../fonts/ProximaNova-Extrabold.woff);
     font-style: normal;
     font-weight: 800;
     font-display: swap
@@ -2898,7 +3217,7 @@ body{
 
 @font-face {
     font-family: Proxima Nova;
-    src: url(./fonts/ProximaNova-Black.woff);
+    src: url(../fonts/ProximaNova-Black.woff);
     font-style: normal;
     font-weight: 900;
     font-display: swap
@@ -2906,7 +3225,7 @@ body{
 
 @font-face {
     font-family: Matroska;
-    src: url(./fonts/Matroska.ttf);
+    src: url(../fonts/Matroska.ttf);
     font-style: normal;
     font-weight: 400;
     font-display: swap
@@ -2928,14 +3247,6 @@ html {
     -webkit-font-smoothing: antialiased;
     box-sizing: border-box
 }
-.header-menu__container.active
-{
-    transform: translateY(-100%);
-    z-index: -1;
-    display: none;
-    transition: 50ms;
-}
-
 
 *,
 :after,
@@ -2985,11 +3296,13 @@ h6 {
 
 #__layout {
     padding-bottom: 0;
+    padding-bottom: var(--player-height, 0)
 }
 
 @media(max-width:576px) {
     #__layout {
         padding-bottom: 0;
+        padding-bottom: var(--mobile-menu-height, 0)
     }
 }
 
@@ -3629,11 +3942,13 @@ h6 {
 
 .search--opened {
     top: 53px;
+    top: calc(53px + var(--safe-top, 0px))
 }
 
 @media(max-width:576px) {
     .search--opened {
         top: 47px;
+        top: calc(47px + var(--safe-top, 0px));
         height: 80px
     }
 }
@@ -3719,6 +4034,7 @@ h6 {
     z-index: 150;
     transition: all .3s ease;
     padding-top: 0;
+    padding-top: var(--safe-top, 0);
 }
 
 .header--dark .header-base-socials__item,
@@ -5048,6 +5364,7 @@ h6 {
     .player {
         height: 145px;
         bottom: 0;
+        bottom: var(--mobile-menu-height, 0)
     }
 }
 
@@ -5554,6 +5871,7 @@ h6 {
     width: 100%;
     border-top: 1px solid #f7f6f6;
     background-color: #fff;
+    padding-bottom: env(safe-area-inset-bottom, 0)
 }
 
 @media(max-width:576px) {
@@ -6031,20 +6349,25 @@ svg:not(:root).svg-inline--fa {
 
 .svg-inline--fa .fa-primary {
     fill: currentColor;
+    fill: var(--fa-primary-color, currentColor);
     opacity: 1;
+    opacity: var(--fa-primary-opacity, 1)
 }
 
 .svg-inline--fa .fa-secondary {
     fill: currentColor;
+    fill: var(--fa-secondary-color, currentColor)
 }
 
 .svg-inline--fa .fa-secondary,
 .svg-inline--fa.fa-swap-opacity .fa-primary {
     opacity: .4;
+    opacity: var(--fa-secondary-opacity, .4)
 }
 
 .svg-inline--fa.fa-swap-opacity .fa-secondary {
     opacity: 1;
+    opacity: var(--fa-primary-opacity, 1)
 }
 
 .svg-inline--fa mask .fa-primary,
@@ -6235,8 +6558,8 @@ svg:not(:root).svg-inline--fa {
     text-transform: none !important;
     letter-spacing: 0;
     text-transform: none;
-    -moz-font-feature-settings: normal;
-    font-feature-settings: normal;
+    -moz-font-feature-settings: normal, ;
+    font-feature-settings: normal, ;
     font-variant: normal;
     line-height: 1
 }
@@ -7570,18 +7893,21 @@ button.swiper-pagination-bullet {
 
 .news__container {
     padding-top: 130px;
+    padding-top: calc(130px + var(--safe-top, 0px));
     padding-bottom: 20px
 }
 
 @media(max-width:1199px) {
     .news__container {
         padding-top: 105px;
+        padding-top: calc(105px + var(--safe-top, 0px))
     }
 }
 
 @media(max-width:576px) {
     .news__container {
         padding-top: 50px;
+        padding-top: calc(50px + var(--safe-top, 0px))
     }
 }
 
